[package]
name = "trim_wav"
authors = ["Akiyuki Okayasu"]
description = "Export trimmed wav files."
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
hound = "3.5.0"
